# AgenticAI-Evolution-Project3-HR-RAG-Assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/raw/: benefits_overview.md  hr_handbook.md  leave_policy.md  onboarding_guide.md  remote_work_policy.md
docs/: architecture.md  decisions.md  hr_question_examples.md
scripts/: ask_hr.py  eval_hr.py  export_layout_png.py  ingest_hr_docs.py
src/hr_rag_assistant/: agent.py  config.py  logging.py  types.py
src/hr_rag_assistant/generation/: answerer.py  citations.py
src/hr_rag_assistant/ingestion/: chunker.py  cleaner.py  index_builder.py  loaders.py
src/hr_rag_assistant/retrieval/: prompts.py  retriever.py  vectorstore.py
tests/: test_chunker.py  test_hr_agent_smoke.py  test_retriever.py
